# sound_test

./: .gitignore  README.md  privacy-policy.md  pubspec.yaml
android/app/: build.gradle
ios/: Podfile
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  main.dart  record_to_stream.dart
lib/blocs/: audio_capture_bloc.dart  tuner_bloc.dart
lib/models/: detection_algorithm.dart  fft_peak.dart  partials_model.dart  settings_model.dart
lib/widgets/: algorithm_button.dart  algorithm_details.dart  algorithm_details_page.dart  algorithm_popup.dart  all_partials.dart  cents_ruler.dart  debug_partial_desc.dart  drawer_widget.dart  label_box.dart  listen_widget.dart  main_area.dart  main_dos.dart  main_widget.dart  partial_desc.dart  pitch_pointer.dart  pitch_slider.dart  played_pitch.dart  select_algorithm_widget.dart  text_box.dart  tick.dart  (+1 more)
scripts/: build.py  build.sh  build_android.sh  build_ios.py
test/: widget_test.dart
tuner-rs/: Cargo.toml
tuner-rs/src/: api.rs  c5.json  constants.rs  detectors.rs  frequency_detector.rs  harmonic_partials.rs  lib.rs  sampleData2.json  tuner.rs  tuner_filter.rs  tuner_history.rs  utils.rs
tuner-rs/src/detectors/: autocorrelation.rs  cepstrum.rs  fft_space.rs  marco_detector.rs  mcleod.rs  peak_iter.rs  raw_fft.rs
tuner-rs/src/detectors/cepstrum/: complex.rs  power.rs
tuner-rs/src/frequency_detector/: autocorrelation.rs  cepstrum.rs  raw_fft.rs
tuner-rs/test_data/: cello_open_c_out_of_tune.json
web/: index.html
(+7 files in other folders)
