[package]
name = "tuner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.10.0"
anyhow = "1.0.52"
rustfft = "6.0.1"
pitch-detection = "0.2.0"
num-traits = { version = "0.2", default-features = false }
enum_dispatch = "0.3.7"
lazy_static = "1.4.0"
fitting = "0.3.0"
thiserror = "1.0.30"
float-cmp = "0.9.0"
smoothed_z_score = { git = "https://github.com/mherrerarendon/smoothed_z_score.git" }
apodize = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
serde_json = "1.0.74"
serde = {version = "1.0.133", features = ["derive"]}
plotters = "0.3.1"
