[package]
name = "tuner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.10.0"
anyhow = "1.0.52"
lazy_static = "1.4.0"
thiserror = "1.0.30"
pitch-detector = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dev-dependencies]
serde_json = "1.0.74"
serde = {version = "1.0.133", features = ["derive"]}
plotters = "0.3.1"
